--- a/searx/static/themes/simple/src/less/style.less
+++ b/searx/static/themes/simple/src/less/style.less
@@ -464,6 +464,17 @@ article[data-vim-selected].category-social {
     background: var(--color-result-image-background);
   }
 
+  .image_resolution {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 50%);
+    padding: 0.3rem 0.5rem;
+    font-size: 0.9rem;
+    color: #fff;
+    border-top-left-radius: 0.3rem;
+  }
+
   span.title,
   span.source {
     display: block;
